@@ -283,6 +283,10 @@ enum ipmi_monitoring_sel_flags
  * IGNORE_SCANNING_DISABLED - Ignore the scanning bit and read sensors no matter
  *                            what.  This option works around motherboards
  *                            that incorrectly indicate sensors as disabled.
+ *
+ * ASSUME_BMC_OWNER - Assume the BMC is the sensor owner no matter what.  This option
+ *                    works around motherboards that incorrectly indicate a non-BMC
+ *                    sensor owner (e.g. usually bridging is required).
  */
 enum ipmi_monitoring_sensor_reading_flags
   {
@@ -293,6 +297,7 @@ enum ipmi_monitoring_sensor_reading_flags
     IPMI_MONITORING_SENSOR_READING_FLAGS_SHARED_SENSORS                   = 0x00000010,
     IPMI_MONITORING_SENSOR_READING_FLAGS_DISCRETE_READING                 = 0x00000020,
     IPMI_MONITORING_SENSOR_READING_FLAGS_IGNORE_SCANNING_DISABLED         = 0x00000040,	
+    IPMI_MONITORING_SENSOR_READING_FLAGS_ASSUME_BMC_OWNER                 = 0x00000040,	
     IPMI_MONITORING_SENSOR_READING_FLAGS_IGNORE_UNREADABLE_SENSORS        = 0x00000002, /* legacy macro */
   };
 
